--- a/index.html
+++ b/index.html
@@ -324,12 +324,7 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Robbe was hired to create a corporate identity. We were very pleased with the work done. He has a
-                    lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                    consectetur adipiscing
-                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
-                  </p>
+                    [REDACTED]
                 </div>
 
               </div>
@@ -346,11 +341,7 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Robbe was hired to create a corporate identity. We were very pleased with the work done. He has a
-                    lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                    consectetur adipiscing
-                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
+                    [REDACTED]
                   </p>
                 </div>
 
@@ -368,11 +359,7 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Robbe was hired to create a corporate identity. We were very pleased with the work done. He has a
-                    lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                    consectetur adipiscing
-                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
+                    [REDACTED]
                   </p>
                 </div>
 
@@ -390,11 +377,7 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Robbe was hired to create a corporate identity. We were very pleased with the work done. He has a
-                    lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                    consectetur adipiscing
-                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
+                    [REDACTED]
                   </p>
                 </div>
 
@@ -436,11 +419,7 @@
 
               <div data-modal-text>
                 <p>
-                  Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
-                  lot of experience
-                  and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                  consectetur adipiscing
-                  elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
+                  [REDACTED]
                 </p>
               </div>
 
@@ -457,7 +436,7 @@
 
         <section class="clients">
 
-          <h3 class="h3 clients-title">Clients</h3>
+          <h3 class="h3 clients-title">Clients (Random logo's)</h3>
 
           <ul class="clients-list has-scrollbar">
 
