--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                   <img src="./assets/images/avatar-1.png" alt="Daniel lewis" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Daniel lewis</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>[Unknown Client]</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
@@ -337,7 +337,7 @@
                   <img src="./assets/images/avatar-2.png" alt="Jessica miller" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Jessica miller</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>[Unknown Client]</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
@@ -355,7 +355,7 @@
                   <img src="./assets/images/avatar-3.png" alt="Emily evans" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Emily evans</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>[Unknown Client]</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
@@ -373,7 +373,7 @@
                   <img src="./assets/images/avatar-4.png" alt="Henry william" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Henry william</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>[Unknown Client]</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
