--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:rverstraete2006@gmail.com" class="contact-link">rverstraete2006@gmail.com</a>
+              <a href="mailto:rverstraete2006@gmail.com" target="_blank" class="contact-link">rverstraete2006@gmail.com</a>
             </div>
 
           </li>
@@ -88,7 +88,7 @@
             <div class="contact-info">
               <p class="contact-title">Phone</p>
 
-              <a href="tel:+12133522795" class="contact-link">+1 (213) 352-2795</a>
+              <a href="tel:+12133522795" target="_blank" class="contact-link">+1 (213) 352-2795</a>
             </div>
 
           </li>
@@ -128,19 +128,19 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="https://www.facebook.com/profile.php?id=100092230571301" class="social-link">
+            <a href="https://www.facebook.com/profile.php?id=100092230571301" target="_blank" class="social-link">
               <ion-icon name="logo-facebook"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="https://x.com/robbevrstr" class="social-link">
+            <a href="https://x.com/robbevrstr" target="_blank" class="social-link">
               <ion-icon name="logo-twitter"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="https://instagram.com/robbevrstr" class="social-link">
+            <a href="https://instagram.com/robbevrstr" target="_blank" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
@@ -441,37 +441,37 @@
           <ul class="clients-list has-scrollbar">
 
             <li class="clients-item">
-              <a href="#">
+              <a href="#" target="_blank">
                 <img src="./assets/images/logo-1-color.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
-              <a href="#">
+              <a href="#" target="_blank">
                 <img src="./assets/images/logo-2-color.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
-              <a href="#">
+              <a href="#" target="_blank">
                 <img src="./assets/images/logo-3-color.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
-              <a href="#">
+              <a href="#" target="_blank">
                 <img src="./assets/images/logo-4-color.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
-              <a href="#">
+              <a href="#" target="_blank">
                 <img src="./assets/images/logo-5-color.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
-              <a href="#">
+              <a href="#" target="_blank">
                 <img src="./assets/images/logo-6-color.png" alt="client logo">
               </a>
             </li>
@@ -748,7 +748,7 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://psidevelopment.be/">
+              <a href="https://psidevelopment.be/" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -766,7 +766,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="#" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -784,7 +784,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
+              <a href="#" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -802,7 +802,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="#">
+              <a href="#" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -820,7 +820,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
+              <a href="#" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -838,7 +838,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
+              <a href="#" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -874,7 +874,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="#">
+              <a href="#" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -892,7 +892,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="#" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -934,7 +934,7 @@
           <ul class="blog-posts-list">
 
             <li class="blog-post-item">
-              <a href="#">
+              <a href="#" target="_blank">
 
                 <figure class="blog-banner-box">
                   <img src="./assets/images/blog-1.jpg" alt="Design conferences in 2022" loading="lazy">
@@ -962,7 +962,7 @@
             </li>
 
             <li class="blog-post-item">
-              <a href="#">
+              <a href="#" target="_blank">
 
                 <figure class="blog-banner-box">
                   <img src="./assets/images/blog-2.jpg" alt="Best fonts every designer" loading="lazy">
@@ -990,7 +990,7 @@
             </li>
 
             <li class="blog-post-item">
-              <a href="#">
+              <a href="#" target="_blank">
 
                 <figure class="blog-banner-box">
                   <img src="./assets/images/blog-3.jpg" alt="Design digest #80" loading="lazy">
@@ -1018,7 +1018,7 @@
             </li>
 
             <li class="blog-post-item">
-              <a href="#">
+              <a href="#" target="_blank">
 
                 <figure class="blog-banner-box">
                   <img src="./assets/images/blog-4.jpg" alt="UI interactions of the week" loading="lazy">
@@ -1046,7 +1046,7 @@
             </li>
 
             <li class="blog-post-item">
-              <a href="#">
+              <a href="#" target="_blank">
 
                 <figure class="blog-banner-box">
                   <img src="./assets/images/blog-5.jpg" alt="The forgotten art of spacing" loading="lazy">
@@ -1074,7 +1074,7 @@
             </li>
 
             <li class="blog-post-item">
-              <a href="#">
+              <a href="#" target="_blank">
 
                 <figure class="blog-banner-box">
                   <img src="./assets/images/blog-6.jpg" alt="Design digest #79" loading="lazy">
