--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
             </div>
 
             <div class="contact-info">
-              <p class="contact-title">Phone</p>
+              <p class="contact-title">Telegram</p>
 
-              <a href="tel:+12133522795" target="_blank" class="contact-link">+1 (213) 352-2795</a>
+              <a href="https://t.me/robbevrstr" target="_blank" class="contact-link">Telegram: robbevrstr</a>
             </div>
 
           </li>
