--- a/index.html
+++ b/index.html
@@ -487,22 +487,16 @@
 
 
       <!--
-        - #RESUME
+        - #SKILLS
       -->
 
-      <article class="resume" data-page="resume">
+      <article class="resume" data-page="skills">
 
         <header>
-          <h2 class="h2 article-title">Skills</h2>
+          <h3 class="h3 article-title">Skills</h3>
         </header>
 
         <section class="timeline">
-
-
-        <section class="timeline">
-
-
-        <section class="skill">
 
           <h3 class="h3 skills-title">My skills</h3>
 
