--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           </li>
 
           <li class="social-item">
-            <a href="https://instagram.com/robbevrstr" target="_blank" class="social-link">
+            <a href="https://instagram.com/robbe.vrstr" target="_blank" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
